force-app/main/default/objects/List_Item__c/List_Item__c.object-meta.xml
<CustomObject>
    <label>List Item</label>
    <nameField>
        <label>List Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>