force-app/main/default/objects/List_Item__c/fields/Description_Notes__c.field-meta.xml
<CustomField>
    <fullName>Description_Notes__c</fullName>
    <label>Description Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>