force-app/main/default/objects/List_Item__c/fields/To_Do_List__c.field-meta.xml
<CustomField>
    <fullName>To_Do_List__c</fullName>
    <label>To Do List</label>
    <referenceTo>To_Do_List__c</referenceTo>
    <relationshipLabel>List Items</relationshipLabel>
    <relationshipName>List_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>